9 May 2014: Wouter
	- Implement draft-ietf-dnsop-rfc6598-rfc6303-01.
	- iana portlist updated.

8 May 2014: Wouter
	- Contrib windows scripts from Yuri Voinov added to src/contrib:
	  create_unbound_ad_servers.cmd: enters anti-ad server lists.
	  unbound_cache.cmd: saves and loads the cache.
	- Added unbound-control-setup.cmd from Yuri Voinov to the windows
	  unbound distribution set.  It requires openssl installed in %PATH%.

6 May 2014: Wouter
	- Change MAX_SENT_COUNT from 16 to 32 to resolve some cases easier.

5 May 2014: Wouter
	- More #567: remove : from output of stub and forward lists, this is
	  easier to parse.

29 April 2014: Wouter
	- iana portlist updated.
	- Add unbound-control flush_negative that flushed nxdomains, nodata,
	  and errors from the cache.  For dnssec-trigger and NetworkManager,
	  fixes cases where network changes have localdata that was already
	  negatively cached from the previous network.

23 April 2014: Wouter
	- Patch from Jeremie Courreges-Anglas to use arc4random_uniform
	  if available on the OS, it gets entropy from the OS.

15 April 2014: Wouter
	- Fix compile with libevent2 on FreeBSD.

11 April 2014: Wouter
	- Fix #502: explain that do-ip6 disable does not stop AAAA lookups,
	  but it stops the use of the ipv6 transport layer for DNS traffic.
	- iana portlist updated.

10 April 2014: Wouter
	- iana portlist updated.
	- Patch from Hannes Frederic Sowa for Linux 3.15 fragmentation
	  option for DNS fragmentation defense.
	- Document that dump_requestlist only prints queries from thread 0.
	- unbound-control stats prints num.query.tcpout with number of TCP
	  outgoing queries made in the previous statistics interval.
	- Fix #567: unbound lists if forward zone is secure or insecure with
	  +i annotation in output of list_forwards, also for list_stubs
	  (for NetworkManager integration.)
	- Fix #554: use unsigned long to print 64bit statistics counters on
	  64bit systems.